<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Minute Watch</string>
	<string name="settings_label">Preferences</string>
	<string name="settings_shortcut">s</string>
	<string name="whitelist_label">Ignored Numbers</string>
	<string name="whitelist_shortcut">i</string>
	
	<string name="minutes_used_label">Minutes Used</string>
	<string name="end_of_billing_month_label">End of Billing Month</string>
	<string name="plan_type_label">Plan Type</string>
	<string name="catch_calls_label">Catch Calls</string>
	<!--Assets for display in Settings -->
	<string name="catch_calls_title">Warn me on evening calls</string>
	<string name="catch_calls_summary">Calls made before unlimited night minutes will be caught, with an option to delay the call.</string>
	<string name="has_free_night_time_minutes_title">Unlimited nights</string>
	<string name="has_free_night_time_minutes_summary">Select if your plan includes unlimited night time minutes.</string>
	<string name="has_free_weekend_minutes_title">Unlimited weekends</string>
	<string name="has_free_weekend_minutes_summary">Select if your plan includes unlimited weekend minutes.</string>
	<string name="night_time_minutes_preference_title">Unlimited nights begin</string>
	<string name="night_time_minutes_preference_summary">Select the time of night when your minutes become free.</string>
	<string name="minutes_per_month_preference_title">Minutes per month</string>
	<string name="minutes_per_month_preference_summary">Enter the number of minutes your plan allows each month.</string>
	<string name="minutes_per_month_preference_dialog">Set the total amount of minutes you want to use in a month</string>
	<string name="bill_cycle_end_preference_title">Next billing date</string>
	<string name="bill_cycle_end_preference_summary">Select the day of the month your next billing date falls on.</string>
	<string name="bill_cycle_end_preference_dialog">Set to date of the month where your billing cycle ends</string>
	<string name="catch_calls_between_title">Call warning window</string>
	<string name="catch_calls_between_summary">How many hours before unlimited night time minutes begin, to catch calls.</string>
	
	<!--Assets for display in Welcome Screen -->
	<string name="welcome">Minute Watch saves you money by helping you better use your minutes.\n\nIf you have unlimited night time minutes, you can delay early evening calls until your minutes are free.\n\nNow, let\'s begin entering your plan details.</string>
	<string name="welcome_set">Enter Plan Details</string>
	
	<!-- Assets for display in CallConfirm -->
	<string name="call_confirm_output_text">If you wait until %s, this call will be free.\n\nYou\'ve used %d of %d minutes for the month.\n\nCall now, or wait until %s?</string>		
	<string name="okay">Call Now</string>
    <string name="cancel">Call Later</string>	
    <string name ="reset_toast_message">%s does not contain the date of %d.
				Because of this your billing cycle will end on the first of %s</string>
				
	<!-- Assets for whitelist activity-->
	<string name="no_whitelists">Here, you can specify numbers that you know won\'t count against your minutes.\n\nPress the Menu button to either type in a number, or select from your contacts.</string> 
	<string name="add_whitelist_number_label">Add Number</string>
	<string name="add_whitelist_number_shortcut">a</string>
	<string name="remove_whitelisted_number_label">Remove Number</string>
	<string name="remove_whitelisted_number_shortcut">r</string>
	<string name="pickFromContactsLable">From Contacts</string>
	<string name="pickFromContactsShortcut">p</string>
	<string name="cancel_input">Cancel</string>
	<string name="nonUniqueNumber">%s is already an ignored number.</string>
</resources>
