<?xml version="1.0" encoding="utf-8"?> 
<PreferenceScreen 
xmlns:android="http://schemas.android.com/apk/res/android"> 
	 <PreferenceCategory android:title="Describe your plan">  
		<com.extendsandroid.minutewatch.publish.preferences.EditIntegerPreference
			    android:key="minutes_per_month"
			    android:title="@string/minutes_per_month_preference_title"
			    android:summary="@string/minutes_per_month_preference_summary"
			    android:dialogTitle="@string/minutes_per_month_preference_summary"
			    android:numeric="integer"
			    android:maxLength="4"
			   	android:defaultValue="300"
			   	android:hint="Number of minutes" 
				 />
		<com.extendsandroid.minutewatch.publish.preferences.EditIntegerPreference
		    android:key="minutes_used"
		    android:title="Minutes already used"
		    android:summary="Set this after you first install MinuteWatch"
		    android:dialogTitle="Minutes used so far"
		    android:numeric="integer"
		    android:maxLength="4"
		    android:defaultValue="0"
		   	android:hint="Number of minutes" 
			/>
		<com.extendsandroid.minutewatch.publish.preferences.BillCycleEndPreference
			android:key="bill_cycle_ends_array"
			android:title="@string/bill_cycle_end_preference_title"
			android:summary="@string/bill_cycle_end_preference_summary"
			android:dialogTitle="@string/bill_cycle_end_preference_summary"
			android:entries="@array/bill_cycle_date_ends"
			android:entryValues="@array/bill_cycle_date_ends"
			android:defaultValue="1"
			/>
		<CheckBoxPreference 
			android:key="has_free_night_time_minutes" 
			android:title="@string/has_free_night_time_minutes_title" 
			android:summary="@string/has_free_night_time_minutes_summary" 
			android:defaultValue="true"
			/>
		<CheckBoxPreference 
			android:key="has_free_weekend_minutes" 
			android:title="@string/has_free_weekend_minutes_title" 
			android:summary="@string/has_free_weekend_minutes_summary" 
			android:defaultValue="true" 
			/>
		<com.extendsandroid.minutewatch.publish.preferences.NightTimeBeginsPreference
		    android:key="night_time_minutes_begin"
		    android:title="@string/night_time_minutes_preference_title"
		    android:summary="@string/night_time_minutes_preference_summary"
		    android:entries="@array/night_time_minutes_hours"
		    android:entryValues="@array/night_time_minutes_values"
		   	android:dialogTitle="@string/night_time_minutes_preference_summary"
		   	android:defaultValue="21" 
		   	android:dependency="has_free_night_time_minutes" 
		   	
		   	/>
			   	
	 </PreferenceCategory>
	 <PreferenceCategory android:title="Preferences">
	 	<CheckBoxPreference 
			android:key="override"
			android:title="@string/catch_calls_title" 
			android:summary="@string/catch_calls_summary" 
			android:defaultValue="true"
			android:dependency="has_free_night_time_minutes" 
			/> 
		<ListPreference
		    android:key="catch_calls_between"
		    android:title="@string/catch_calls_between_title"
		    android:summary="@string/catch_calls_between_summary"
		    android:entries="@array/catch_calls_between_key"
		    android:entryValues="@array/catch_calls_between_values"
		   	android:dialogTitle="@string/catch_calls_between_summary"
		   	android:defaultValue="2"
		   	android:dependency="has_free_night_time_minutes" 
		   	/>
	</PreferenceCategory>   	
</PreferenceScreen> 
