<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/chatview"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:padding="10dip"
	    >
	 <com.extendsandroid.minutewatch.publish.view.UnderlinedTextView   
	 	android:id="@+id/minutes_used_label"
	 	android:text="@string/minutes_used_label"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:textSize="25dip"
	    />
	<TextView   
	 	android:id="@+id/minutes_used"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:textColor="@color/white"
	    android:paddingLeft="10dip" 
	    android:paddingTop="10dip"
	    android:textSize="18dip" 
	    />
	 <com.extendsandroid.minutewatch.publish.view.UnderlinedTextView   
	 	android:id="@+id/end_of_billing_month_label"
	 	android:text="@string/end_of_billing_month_label"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:paddingTop="10dip" 
	    android:textSize="25dip"
	    />
	 <TextView  
	 	android:id="@+id/end_of_billing_month"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:paddingTop="10dip"
	    android:paddingLeft="10dip" 
	    android:textColor="@color/white"
	    android:textSize="17dip"
	    />
	<com.extendsandroid.minutewatch.publish.view.UnderlinedTextView   
	 	android:id="@+id/plan_type_label"
	 	android:text="@string/plan_type_label"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:paddingTop="10dip" 
	    android:textSize="25dip"
	    />
	<TextView  
	 	android:id="@+id/plan_type"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:paddingTop="10dip"
	    android:paddingLeft="10dip"
	    android:textSize="17dip"
	    android:textColor="@color/white"
	    />
	 <com.extendsandroid.minutewatch.publish.view.UnderlinedTextView   
	 	android:id="@+id/catch_calls_label"
	 	android:text="@string/catch_calls_label"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:paddingTop="10dip"  
	    android:textSize="25dip"
	    />
	 <TextView  
	 	android:id="@+id/catch_calls"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:paddingTop="10dip"
	    android:paddingLeft="10dip"
	    android:textSize="17dip" 
	    android:textColor="@color/white"
	    />
		  <RelativeLayout
			xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent">
			<ImageView
				android:src="@drawable/minute_watch_large_icon"
				android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:layout_alignParentBottom="true" 
			    android:layout_alignParentRight="true"/>
		</RelativeLayout>
	</LinearLayout>
</ScrollView>



